[package]
name = "stark_prover_verifier"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/cargo"
documentation = "https://docs.rs/cargo"
readme = "README.md"
description = """
A stark prover
"""

[lib]
name = "stark_prover_verifier"
path = "src/lib.rs"

[dependencies]
